cfn_benchmark/cfn_templates/Tianyi2__IRIS/data/cloudformation_collected_templates_new/template_12003_websphere.yaml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SSH and Web Ports
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: '0.0.0.0/0'
      - IpProtocol: tcp
        FromPort: '9080'
        ToPort: '9080'
        CidrIp: '0.0.0.0/0'
      - IpProtocol: tcp
        FromPort: '9090'
        ToPort: '9090'
        CidrIp: '0.0.0.0/0'
      - IpProtocol: tcp
        FromPort: '20000'
        ToPort: '20100'
        CidrIp: '0.0.0.0/0'
  Liberty:
    Type: 'AWS::EC2::Instance'
    Properties:
      ImageId: ami-5c790c26
      InstanceType: m3.medium
      KeyName: DukeLegion
      SecurityGroups:
        - Ref: InstanceSecurityGroup
      Tags:
        -
          Key: Appplication
          Value: WebSphere Liberty
        -
          Key: Domain
          Value: None
        -
          Key: Environment
          Value: Test
        -
          Key: LifeTime
          Value: Transient
        -
          Key: Name
          Value: WebSphere Liberty
        -
          Key: OS
          Value: Linux
        -
          Key: OwnerContact
          Value: "#{Deployer Contact}"
        -
          Key: Purpose
          Value: Support Test Instance
        -
          Key: Source
          Value: CloudForation Script in Octopus Deploy
        -
          Key: scheduler:ec2-startstop
          Value: true
Outputs:
  PublicIp:
    Value:
      Fn::GetAtt:
      - Liberty
      - PublicIp
    Description: Server's PublicIp Address
